# pyTetris

./: pyproject.toml
code/: game.py  main.py  preview.py  score.py  timer.py
