[tool.poetry]
name = "pytetris"
version = "0.1.0"
description = ""
authors = ["Christian Murschall <christian@murschall.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame-ce = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
